# clinic-mcp-server

./: .gitignore  Dockerfile  README.md  pyproject.toml
examples/complex/: demo_scenario.yaml  play_client.py
examples/simple_http/: clinic-mcp-local-run.md  http_client.py
examples/simple_sse/: clinic-mcp-local-run-sse.md  sse_client.py
scripts/: export.py  export2.py  play_client.py  run_server.sh  simple_client.py
src/clinic_mcp_server/: __init__.py  __main__.py  cli.py  clinic_server.py  main.py
src/clinic_mcp_server/auth/: jwt_hs256.py  middleware.py
src/clinic_mcp_server/cli/: app.py
src/clinic_mcp_server/clinic/: __init__.py  clinic_service.py
src/clinic_mcp_server/clinic/domain/: data_types.py  repo.py  strenum.py
src/clinic_mcp_server/clinic/sqlite/: __init__.py  db.py  populate.py  repo.py
src/clinic_mcp_server/domain/: default_values.py  enums.py  errors.py  interfaces.py
src/clinic_mcp_server/infra/: sqlite_repo.py
src/clinic_mcp_server/mcp/: __init__.py  clinic_server.py
src/clinic_mcp_server/mcp/auth/: jwt_hs256.py  middleware.py
src/clinic_mcp_server/model/: clinic_db.py
src/clinic_mcp_server/runtime/: asgi_health.py  demo_token.py  runner.py  settings.py
src/clinic_mcp_server/services/: clinic_service.py
src/clinic_mcp_server/tools/: clinic_server.py
storage/: clinic.db
tests/: conftest.py  test_auth_enforced.py  test_auth_middleware.py  test_http_transport.py  test_jwt_hs256.py  test_service_unit.py  test_settings.py  test_sqlite_repo_integration.py  test_sse_transport.py  test_stdio_transport.py
tests/clinic/: test_service_unit.py
tests/mcp/: test_auth_middleware.py  test_jwt_hs256.py  test_settings.py  test_sse_transport.py
(+4 files in other folders)
