[project]
name = "clinic-msp-server"
version = "0.0.1"
description = "Clinic MCP server with tools for debugging and testing MCP clients"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "Vitaly Zabershinsky, Naama Zwerling" }]
keywords = ["mcp", "model-context-protocol", "testing", "ai", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    "fastmcp>=2.0.0",
    "pydantic>=2.0",
    "fastmcp>=2.14.5",
    "uvicorn>=0.41.0",
    # "websockets",
    "PyJWT>=2.8.0",
    "pyyaml>=6.0.3",
    "typer",
    "wsproto>=1.2.0"
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "mypy>=1.10",
    "ruff>=0.5.0",
    "black>=24.0",
    "isort>=5.13",
    "autoflake>=2.3",
    "pyupgrade>=3.19",
    "pytest-cov>=7.0.0",
    "pyright>=1.1.408",
]


[project.scripts]
clinic-mcp-server = "clinic_mcp_server.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/clinic_mcp_server"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
ignore = ["E501"]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.13"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

